--- a/src/main/resources/assets/superpackutils/lang/en_us.json
+++ b/src/main/resources/assets/superpackutils/lang/en_us.json
@@ -2,12 +2,30 @@
 
   "item.superpackutils.steel_gear": "Steel gear",
   "item.superpackutils.big_steel_casing": "Big steel casing",
-  "item.superpackutils.diesel_infused_osmium_ingot": "Diesel infused osmium ingot",
   "item.superpackutils.tiny_coal": "Tiny coal",
+  "item.superpackutils.mythril_ingot": "Mythril Ingot",
+  "item.superpackutils.mythril_dust": "Mythril Dust",
+  "item.superpackutils.mythril_nugget": "Mythril Nugget",
+  "item.superpackutils.dep_mythril_dust": "Depleted Mythril Dust",
+  "item.superpackutils.platinum_ingot": "Platinum Ingot",
+  "item.superpackutils.platinum_dust": "Platinum Dust",
+  "item.superpackutils.platinum_nugget": "Platinum Nugget",
+  "item.superpackutils.plough": "Plough",
+  "item.superpackutils.molten_platinum_bucket": "Molten Platinum Bucket",
+  "item.superpackutils.molten_mythril_bucket": "Molten Mythril Bucket",
+  "item.superpackutils.bio_plastic": "Bio Plastic",
+  "item.superpackutils.limestone_dust": "Limestone Dust",
+  "item.superpackutils.harvesting_wheel": "Harvesting Wheel",
 
   "block.superpackutils.tiny_torch": "Tiny torch",
+  "block.superpackutils.dust_block": "Dust",
+  "block.superpackutils.mythril_block": "Mythril Block",
+  "block.superpackutils.platinum_block": "Platinum Block",
+  "block.superpackutils.placeholder": "Placeholder",
+  "block.superpackutils.deepslate": "Deepslate",
 
-  "itemGroup.superpackutils": "Puffercreate: Utils",
+  "fluid.superpackutils.mythril_fluid": "Molten Mythril",
+  "fluid.superpackutils.platinum_fluid": "Molten Platinum",
 
-  "superpackutils.spellpiece.trick_slowfalling": "Trick: Slow falling"
+  "itemGroup.superpackutils": "Puffercreate: Utils"
 }
