Changed the voxelshape of the tiny torch

--- a/src/main/resources/assets/superpackutils/lang/en_us.json
+++ b/src/main/resources/assets/superpackutils/lang/en_us.json
@@ -23,6 +23,7 @@
   "block.superpackutils.mythril_block": "Mythril Block",
   "block.superpackutils.platinum_block": "Platinum Block",
   "block.superpackutils.deepslate": "Deepslate",
+  "block.superpackutils.redstone_clock": "Redstone Clock",
 
   "fluid.superpackutils.mythril_fluid": "Molten Mythril",
   "fluid.superpackutils.platinum_fluid": "Molten Platinum",
