try to fix translation

--- a/src/main/resources/assets/superpackutils/lang/en_us.json
+++ b/src/main/resources/assets/superpackutils/lang/en_us.json
@@ -2,5 +2,5 @@
   "item.superpackutils.chiller_coin_cast": "Coin Cast",
   "item.superpackutils.chiller_gear_cast": "Gear Cast",
   "item.superpackutils.chiller_nugget_cast": "Nugget Cast",
-  "item.superpackutils.chiller_plate_cast": "Plate Cast",
+  "item.superpackutils.chiller_plate_cast": "Plate Cast"
 }
