--- a/src/main/resources/assets/superpackutils/lang/en_us.json
+++ b/src/main/resources/assets/superpackutils/lang/en_us.json
@@ -187,7 +187,7 @@
   "gas.superpackutils.boric_acid": "Boric Acid",
   "gas.superpackutils.diborane": "Diborane",
   "gas.superpackutils.propene": "Propene",
-  "gas.superpackutils.abs": "Acrylonitrile Butadiene Styrene",
+  "gas.superpackutils.abs": "Acrylobutadistyrene",
   "gas.superpackutils.acrylonitrile": "Acrylonitrile",
   "gas.superpackutils.styrene": "Styrene",
   "gas.superpackutils.isoprene": "Isoprene",
