--- a/src/main/resources/assets/superpackutils/lang/en_us.json
+++ b/src/main/resources/assets/superpackutils/lang/en_us.json
@@ -278,6 +278,16 @@
   "item.superpackutils.boron_ingot": "Boron Ingot",
   "item.superpackutils.starlight_stick": "Starlight Stick",
   "item.superpackutils.boron_dust": "Boron Dust",
+  "item.superpackutils.carobbiite": "Carobbiite",
+  "item.superpackutils.carobbiite_dust": "Carobbiite Dust",
+  "item.superpackutils.boron_nitride": "Boron Nitride",
+  "item.superpackutils.boron_nitride_dust": "Boron Nitride Dust",
+  "item.superpackutils.boron_arsenide": "Boron Arsenide",
+  "item.superpackutils.boron_arsenide_dust": "Boron Arsenide Dust",
+  "item.superpackutils.rhodochrosite": "Rhodochrosite",
+  "item.superpackutils.rhodochrosite_dust": "Rhodochrosite Dust",
+  "item.superpackutils.villiaumite": "Villiaumite",
+  "item.superpackutils.villiaumite_dust": "Villiaumite Dust",
   "item.superpackutils.crystal_shard": "Crystal Shard",
   "item.superpackutils.alchemical_aluminum_dust": "Alchemical Aluminum Dust",
   "item.superpackutils.alchemical_copper_dust": "Alchemical Copper Dust",
