added new plastic, polystyrene and other misc stuff

--- a/src/main/resources/assets/superpackutils/lang/en_us.json
+++ b/src/main/resources/assets/superpackutils/lang/en_us.json
@@ -23,6 +23,9 @@
   "block.superpackutils.tiny_torch": "Tiny Torch",
   "block.superpackutils.wall_tiny_torch": "Wall Tiny Torch",
 
+  "slurry.superpackutils.dirty_nickel": "Dirty Nickel Slurry",
+  "slurry.superpackutils.clean_nickel": "Clean Nickel Slurry",
+
   "block.superpackutils.ethyl_chloride": "Liquid Ethyl Chloride",
   "block.superpackutils.polyethene": "Liquid Polyethylene",
   "block.superpackutils.chemical_death": "Liquid Chemical Death",
@@ -32,7 +35,9 @@
   "block.superpackutils.ammonia": "Liquid Ammonia",
   "block.superpackutils.octane": "Liquid Octane",
   "block.superpackutils.methane": "Liquid Methane",
+  "block.superpackutils.nitrous_oxide": "Liquid Nitrous Oxide",
   "block.superpackutils.silicon_dioxide": "Liquid Silicon Dioxide",
+  "block.superpackutils.carbon_dioxide": "Liquid Carbon Dioxide",
   "block.superpackutils.propylene": "Liquid Propylene",
   "block.superpackutils.benzene": "Liquid Benzene",
   "block.superpackutils.etbe": "Liquid Ethyl Tert-Butyl Ether",
@@ -41,6 +46,7 @@
   "block.superpackutils.butane": "Liquid Butane",
   "block.superpackutils.butene": "Liquid Butene",
   "block.superpackutils.propane": "Liquid Propane",
+  "block.superpackutils.ho_gasoline": "High-Octane Gasoline",
   "block.superpackutils.boric_acid": "Liquid Boric Acid",
   "block.superpackutils.diborane": "Liquid Diborane",
   "block.superpackutils.propene": "Liquid Propene",
@@ -55,6 +61,7 @@
   "block.superpackutils.petrotheum": "Tectonic Petrotheum",  
   "block.superpackutils.molten_bio_plastic": "Molten Bio Plastic", 
   "block.superpackutils.naphtha": "Naphtha", 
+  "block.superpackutils.sulfurized_gasoline": "Sulfurized Gasoline", 
   "block.superpackutils.napalm_b": "Napalm-B", 
   "block.superpackutils.sulfurized_naphtha": "Sulfurized Naphtha", 
   "block.superpackutils.sulfurized_light_oil": "Sulfurized Light Oil",  
@@ -84,6 +91,7 @@
   "fluid.superpackutils.octane": "Liquid Octane",
   "fluid.superpackutils.methane": "Liquid Methane",
   "fluid.superpackutils.silicon_dioxide": "Liquid Silicon Dioxide",
+  "fluid.superpackutils.carbon_dioxide": "Liquid Carbon Dioxide",
   "fluid.superpackutils.propylene": "Liquid Propylene",
   "fluid.superpackutils.benzene": "Liquid Benzene",
   "fluid.superpackutils.etbe": "Liquid Ethyl Tert-Butyl Ether",
@@ -93,10 +101,13 @@
   "fluid.superpackutils.butene": "Liquid Butene",
   "fluid.superpackutils.propane": "Liquid Propane",
   "fluid.superpackutils.boric_acid": "Liquid Boric Acid",
+  "fluid.superpackutils.nitrous_oxide": "Liquid Nitrous Oxide",
   "fluid.superpackutils.diborane": "Liquid Diborane",
+  "fluid.superpackutils.ho_gasoline": "High-Octane Gasoline",
   "fluid.superpackutils.propene": "Liquid Propene",
   "fluid.superpackutils.abs": "Liquid Acrylobutadistyrene",
   "fluid.superpackutils.acrylonitrile": "Liquid Acrylonitrile",
+  "fluid.superpackutils.sulfurized_gasoline": "Sulfurized Gasoline", 
   "fluid.superpackutils.styrene": "Liquid Styrene",
   "fluid.superpackutils.isoprene": "Liquid Isoprene",
   "fluid.superpackutils.ethyl_benzene": "Liquid Ethyl Benzene", 
@@ -135,8 +146,10 @@
   "item.superpackutils.octane_bucket": "Liquid Octane Bucket",
   "item.superpackutils.methane_bucket": "Liquid Methane Bucket",
   "item.superpackutils.silicon_dioxide_bucket": "Liquid Silicon Dioxide Bucket",
+  "item.superpackutils.carbon_dioxide_bucket": "Liquid Carbon Dioxide Bucket",
   "item.superpackutils.propylene_bucket": "Liquid Propylene Bucket",
   "item.superpackutils.benzene_bucket": "Liquid Benzene Bucket",
+  "item.superpackutils.sulfurized_gasoline_bucket": "Sulfurized Gasoline Bucket", 
   "item.superpackutils.etbe_bucket": "Liquid Ethyl Tert-Butyl Ether Bucket",
   "item.superpackutils.butadiene_bucket": "Liquid Butadiene Bucket",
   "item.superpackutils.toluene_bucket": "Liquid Toluene Bucket",
@@ -148,7 +161,9 @@
   "item.superpackutils.propene_bucket": "Liquid Propene Bucket",
   "item.superpackutils.abs_bucket": "Liquid Acrylobutadistyrene Bucket",
   "item.superpackutils.acrylonitrile_bucket": "Liquid Acrylonitrile Bucket",
+  "item.superpackutils.ho_gasoline_bucket": "High-Octane Gasoline Bucket",
   "item.superpackutils.styrene_bucket": "Liquid Styrene Bucket",
+  "item.superpackutils.nitrous_oxide_bucket": "Liquid Nitrous Oxide Bucket",
   "item.superpackutils.isoprene_bucket": "Liquid Isoprene Bucket",
   "item.superpackutils.ethyl_benzene_bucket": "Liquid Ethyl Benzene Bucket", 
   "item.superpackutils.pyrotheum_bucket": "Blazing Pyrotheum Bucket", 
@@ -197,6 +212,7 @@
   "gas.superpackutils.butene": "Butene",
   "gas.superpackutils.propane": "Propane",
   "gas.superpackutils.boric_acid": "Boric Acid",
+  "gas.superpackutils.nitrous_oxide": "Nitrous Oxide",
   "gas.superpackutils.diborane": "Diborane",
   "gas.superpackutils.propene": "Propene",
   "gas.superpackutils.abs": "Acrylobutadistyrene",
@@ -273,6 +289,7 @@
   "item.superpackutils.crushed_cobalt_ore": "Crushed Cobalt Ore",
   "item.superpackutils.quartz_enriched_blend": "Quartz Enriched Blend",
   "item.superpackutils.cobalt_dust": "Cobalt Dust",
+  "item.superpackutils.polystyrene_bar": "Polystyrene Bar",
   "item.superpackutils.rich_slag_alloy": "Rich Slag Alloy",
   "item.superpackutils.heating_element": "Heating Element",
   "item.superpackutils.circuit_board": "Circuit Board",
@@ -360,6 +377,8 @@
   "item.superpackutils.iron_ore_piece": "Iron Ore Piece",
   "item.superpackutils.lead_ore_piece": "Lead Ore Piece",
   "item.superpackutils.rune": "Blank Rune",
+  "item.superpackutils.abs_pellet": "ABS Pellet",
+  "item.superpackutils.abs_sheet": "ABS Sheet",
   "item.superpackutils.azure_sawdust": "Azure Sawdust",
   "item.superpackutils.azure_pigment": "Azure Pigment",
   "item.superpackutils.bloody_sawdust": "Bloody Sawdust",
@@ -368,6 +387,8 @@
   "item.superpackutils.grassy_pigment": "Grassy Pigment",
   "item.superpackutils.ender_pearl_nugget": "Ender Pearl Shard",
   "item.superpackutils.basic_alloy": "Basic Alloy",
+  "item.superpackutils.epoxy_rosin": "Epoxy Rosin",
+  "item.superpackutils.epoxy_rosin_block": "Block of Epoxy Rosin",
   "item.superpackutils.polished_quartz": "Polished Nether Quartz",
   "item.superpackutils.bedrock_dust": "Bedrock Dust",
   "item.superpackutils.limestone_dust": "Limestone Dust",
