added epoxy slag

--- a/src/main/resources/assets/superpackutils/lang/en_us.json
+++ b/src/main/resources/assets/superpackutils/lang/en_us.json
@@ -293,6 +293,7 @@
   "item.superpackutils.rich_slag_alloy": "Rich Slag Alloy",
   "item.superpackutils.heating_element": "Heating Element",
   "item.superpackutils.circuit_board": "Circuit Board",
+  "item.superpackutils.epoxy_slag": "Epoxy Slag",
   "item.superpackutils.manganese_ingot": "Manganese Ingot",
   "item.superpackutils.clump_nickel": "Nickel Clump",
   "item.superpackutils.dirty_dust_nickel": "Dirty Nickel Dust",
