fixed some problems

--- a/src/main/resources/assets/superpackutils/lang/en_us.json
+++ b/src/main/resources/assets/superpackutils/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "block.superpackutils.big_steel_casing": "Reinforced Steel Casing",
   "block.superpackutils.deepslate": "Deepslate",
+  "block.superpackutils.epoxy_rosin_block": "Block of Epoxy Rosin",
   "block.superpackutils.dimensional_stone": "Dimensional Stone",
   "block.superpackutils.industrial_sand": "Industrial Sand",
   "block.superpackutils.dyingrock": "Dyingrock",
@@ -172,7 +173,7 @@
   "item.superpackutils.petrotheum_bucket": "Tectonic Petrotheum Bucket",
   "item.superpackutils.molten_bio_plastic_bucket": "Molten Bio Plastic Bucket",  
   "item.superpackutils.naphtha_bucket": "Naphtha Bucket", 
-  "item.superpackutils.napalm_b": "Napalm-B Bucket",    
+  "item.superpackutils.napalm_b_bucket": "Napalm-B Bucket",    
   "item.superpackutils.sulfurized_naphtha_bucket": "Sulfurized Naphtha Bucket",   
   "item.superpackutils.sulfurized_light_oil_bucket": "Sulfurized Light Oil Bucket",  
   "item.superpackutils.sulfurized_heavy_oil_bucket": "Sulfurized Heavy Oil Bucket",    
@@ -389,7 +390,6 @@
   "item.superpackutils.ender_pearl_nugget": "Ender Pearl Shard",
   "item.superpackutils.basic_alloy": "Basic Alloy",
   "item.superpackutils.epoxy_rosin": "Epoxy Rosin",
-  "item.superpackutils.epoxy_rosin_block": "Block of Epoxy Rosin",
   "item.superpackutils.polished_quartz": "Polished Nether Quartz",
   "item.superpackutils.bedrock_dust": "Bedrock Dust",
   "item.superpackutils.limestone_dust": "Limestone Dust",
