added mek alloys special infuse type

--- a/src/main/resources/assets/superpackutils/lang/en_us.json
+++ b/src/main/resources/assets/superpackutils/lang/en_us.json
@@ -245,6 +245,9 @@
   "infuse_type.superpackutils.alchemical_aluminum": "Alchemical Aluminum",
   "infuse_type.superpackutils.alchemical_zinc": "Alchemical Zinc",
   "infuse_type.superpackutils.alchemical_cobalt": "Alchemical Cobalt",
+  "infuse_type.superpackutils.redstonia": "Redstonia",
+  "infuse_type.superpackutils.redstonia": "Diamantine",
+  "infuse_type.superpackutils.extremium": "Extremium",
 
   "item.superpackutils.blood_bottle": "Blood Bottle",
   "item.superpackutils.skyslime_bottle": "Skyslime Bottle",
