added ichor translation and bucket texture

--- a/src/main/resources/assets/superpackutils/lang/en_us.json
+++ b/src/main/resources/assets/superpackutils/lang/en_us.json
@@ -64,6 +64,7 @@
   "block.superpackutils.naphtha": "Naphtha", 
   "block.superpackutils.sulfurized_gasoline": "Sulfurized Gasoline", 
   "block.superpackutils.napalm_b": "Napalm-B", 
+  "block.superpackutils.ichor": "Ichor", 
   "block.superpackutils.sulfurized_naphtha": "Sulfurized Naphtha", 
   "block.superpackutils.sulfurized_light_oil": "Sulfurized Light Oil",  
   "block.superpackutils.sulfurized_heavy_oil": "Sulfurized Heavy Oil",    
@@ -116,6 +117,7 @@
   "fluid.superpackutils.cryotheum": "Gelid Cryotheum",   
   "fluid.superpackutils.aerotheum": "Zephyrean Aerotheum",  
   "fluid.superpackutils.petrotheum": "Tectonic Petrotheum", 
+  "fluid.superpackutils.ichor": "Ichor", 
   "fluid.superpackutils.molten_bio_plastic": "Molten Bio Plastic",  
   "fluid.superpackutils.naphtha": "Naphtha",    
   "fluid.superpackutils.napalm_b": "Napalm-B", 
