added crystallized slimess, elemental gem and molten boron & lithium

--- a/src/main/resources/assets/superpackutils/lang/en_us.json
+++ b/src/main/resources/assets/superpackutils/lang/en_us.json
@@ -47,6 +47,8 @@
   "block.superpackutils.butane": "Liquid Butane",
   "block.superpackutils.butene": "Liquid Butene",
   "block.superpackutils.propane": "Liquid Propane",
+  "block.superpackutils.molten_boron": "Molten Boron",
+  "block.superpackutils.molten_lithium": "Molten Lithium",
   "block.superpackutils.ho_gasoline": "High-Octane Gasoline",
   "block.superpackutils.boric_acid": "Liquid Boric Acid",
   "block.superpackutils.diborane": "Liquid Diborane",
@@ -107,6 +109,8 @@
   "fluid.superpackutils.diborane": "Liquid Diborane",
   "fluid.superpackutils.ho_gasoline": "High-Octane Gasoline",
   "fluid.superpackutils.propene": "Liquid Propene",
+  "fluid.superpackutils.molten_boron": "Molten Boron",
+  "fluid.superpackutils.molten_lithium": "Molten Lithium",
   "fluid.superpackutils.abs": "Liquid Acrylobutadistyrene",
   "fluid.superpackutils.acrylonitrile": "Liquid Acrylonitrile",
   "fluid.superpackutils.sulfurized_gasoline": "Sulfurized Gasoline", 
@@ -158,6 +162,8 @@
   "item.superpackutils.toluene_bucket": "Liquid Toluene Bucket",
   "item.superpackutils.butane_bucket": "Liquid Butane Bucket",
   "item.superpackutils.butene_bucket": "Liquid Butene Bucket",
+  "item.superpackutils.molten_boron_bucket": "Molten Boron Bucket",
+  "item.superpackutils.molten_lithium_bucket": "Molten Lithium Bucket",
   "item.superpackutils.propane_bucket": "Liquid Propane Bucket",
   "item.superpackutils.boric_acid_bucket": "Liquid Boric Acid Bucket",
   "item.superpackutils.diborane_bucket": "Liquid Diborane Bucket",
@@ -186,6 +192,7 @@
   "item.superpackutils.sc_heavy_oil_bucket": "Steam-Cracked Heavy Oil Bucket",   
   "item.superpackutils.hc_heavy_oil_bucket": "Hydro-Cracked Heavy Oil Bucket",
   "item.superpackutils.epoxy_resin_bucket": "Epoxy Resin Bucket",
+  "item.superpackutils.ichor_bucket": "Ichor Bucket",
   "item.superpackutils.borax_solution_bucket": "Borax Solution Bucket", 
   "item.superpackutils.boron_nitride_solution_bucket": "Boron Nitride Solution Bucket", 
   "item.superpackutils.sf_solution_bucket": "Sodium Fluoride Solution Bucket",
@@ -234,6 +241,10 @@
   "gas.superpackutils.black_corundum": "Black Corundum",
 
   "infuse_type.superpackutils.petroleum_coke": "Petroleum Coke",
+  "infuse_type.superpackutils.slime_crystal": "Crystallized Slime",
+  "infuse_type.superpackutils.skyslime_crystal": "Crystallized Skyslime",
+  "infuse_type.superpackutils.enderslime_crystal": "Crystallized Enderslime",
+  "infuse_type.superpackutils.ichor_crystal": "Crystallized Ichor",
   "infuse_type.superpackutils.alchemical_nickel": "Alchemical Nickel",
   "infuse_type.superpackutils.alchemical_iron": "Alchemical Iron",
   "infuse_type.superpackutils.alchemical_gold": "Alchemical Gold",
@@ -304,6 +315,7 @@
   "item.superpackutils.shard_nickel": "Nickel Shard",
   "item.superpackutils.manganese_dust": "Manganese Dust",
   "item.superpackutils.slime_bottle": "Slime Bottle",
+  "item.superpackutils.elemental_gem": "Elemental Gem",
   "item.superpackutils.lithium_ingot": "Lithium Ingot",
   "item.superpackutils.lithium_dust": "Lithium Dust",
   "item.superpackutils.vibrant_processor": "Vibrant Core",
