added blaze essence

--- a/src/main/resources/assets/superpackutils/lang/en_us.json
+++ b/src/main/resources/assets/superpackutils/lang/en_us.json
@@ -54,6 +54,7 @@
   "block.superpackutils.diborane": "Liquid Diborane",
   "block.superpackutils.propene": "Liquid Propene",
   "block.superpackutils.abs": "Liquid Acrylobutadistyrene",
+  "block.superpackutils.blaze_essence": "Blaze Essence",
   "block.superpackutils.acrylonitrile": "Liquid Acrylonitrile",
   "block.superpackutils.styrene": "Liquid Styrene",
   "block.superpackutils.isoprene": "Liquid Isoprene",
@@ -110,6 +111,7 @@
   "fluid.superpackutils.ho_gasoline": "High-Octane Gasoline",
   "fluid.superpackutils.propene": "Liquid Propene",
   "fluid.superpackutils.molten_boron": "Molten Boron",
+  "fluid.superpackutils.blaze_essence": "Blaze Essence",
   "fluid.superpackutils.molten_lithium": "Molten Lithium",
   "fluid.superpackutils.abs": "Liquid Acrylobutadistyrene",
   "fluid.superpackutils.acrylonitrile": "Liquid Acrylonitrile",
@@ -176,6 +178,7 @@
   "item.superpackutils.isoprene_bucket": "Liquid Isoprene Bucket",
   "item.superpackutils.ethyl_benzene_bucket": "Liquid Ethyl Benzene Bucket", 
   "item.superpackutils.pyrotheum_bucket": "Blazing Pyrotheum Bucket", 
+  "item.superpackutils.blaze_essence_bucket": "Blaze Essence Bucket",
   "item.superpackutils.cryotheum_bucket": "Gelid Cryotheum Bucket", 
   "item.superpackutils.aerotheum_bucket": "Zephyrean Aerotheum Bucket",
   "item.superpackutils.petrotheum_bucket": "Tectonic Petrotheum Bucket",
