added plastic waste

--- a/src/main/resources/assets/superpackutils/lang/en_us.json
+++ b/src/main/resources/assets/superpackutils/lang/en_us.json
@@ -232,6 +232,7 @@
   "gas.superpackutils.acrylonitrile": "Acrylonitrile",
   "gas.superpackutils.styrene": "Styrene",
   "gas.superpackutils.isoprene": "Isoprene",
+  "gas.superpackutils.plastic_waste": "Plastic Waste",
   "gas.superpackutils.ethyl_benzene": "Ethyl Benzene",
   "gas.superpackutils.red_corundum": "Red Corundum",
   "gas.superpackutils.orange_corundum": "Orange Corundum",
