added liquid plastic waste and removed duplicate lang key

--- a/src/main/resources/assets/superpackutils/lang/en_us.json
+++ b/src/main/resources/assets/superpackutils/lang/en_us.json
@@ -33,7 +33,6 @@
   "block.superpackutils.ethyl_chloride": "Liquid Ethyl Chloride",
   "block.superpackutils.polyethene": "Liquid Polyethylene",
   "block.superpackutils.chemical_death": "Liquid Chemical Death",
-  "block.superpackutils.carbon_dioxide": "Liquid Carbon Dioxide",
   "block.superpackutils.pure_sulfuric_acid": "Liquid Pure Sulfuric Acid",
   "block.superpackutils.cyanide": "Liquid Cyanide",
   "block.superpackutils.ammonia": "Liquid Ammonia",
@@ -87,7 +86,8 @@
   "block.superpackutils.pf_solution": "Potassium Fluoride Solution", 
   "block.superpackutils.ph_solution": "Potassium Hydroxide Solution", 
   "block.superpackutils.sh_solution": "Sodium Hydroxide Solution", 
-  "block.superpackutils.cs_solution": "Calcium Sulfate Solution", 
+  "block.superpackutils.cs_solution": "Calcium Sulfate Solution",
+  "block.superpackutils.plastic_waste": "Liquid Plastic Waste",
 
   "fluid.superpackutils.ethyl_chloride": "Liquid Ethyl Chloride",
   "fluid.superpackutils.polyethene": "Liquid Polyethylene",
@@ -99,7 +99,6 @@
   "fluid.superpackutils.octane": "Liquid Octane",
   "fluid.superpackutils.methane": "Liquid Methane",
   "fluid.superpackutils.silicon_dioxide": "Liquid Silicon Dioxide",
-  "fluid.superpackutils.carbon_dioxide": "Liquid Carbon Dioxide",
   "fluid.superpackutils.propylene": "Liquid Propylene",
   "fluid.superpackutils.benzene": "Liquid Benzene",
   "fluid.superpackutils.etbe": "Liquid Ethyl Tert-Butyl Ether",
@@ -146,12 +145,12 @@
   "fluid.superpackutils.pf_solution": "Potassium Fluoride Solution", 
   "fluid.superpackutils.ph_solution": "Potassium Hydroxide Solution", 
   "fluid.superpackutils.sh_solution": "Sodium Hydroxide Solution", 
-  "fluid.superpackutils.cs_solution": "Calcium Sulfate Solution", 
+  "fluid.superpackutils.cs_solution": "Calcium Sulfate Solution",
+  "fluid.superpackutils.plastic_waste": "Liquid Plastic Waste",
 
   "item.superpackutils.ethyl_chloride_bucket": "Liquid Ethyl Chloride Bucket",
   "item.superpackutils.polyethene_bucket": "Liquid Polyethylene Bucket",
   "item.superpackutils.chemical_death_bucket": "Liquid Chemical Death Bucket",
-  "item.superpackutils.carbon_dioxide_bucket": "Liquid Carbon Dioxide Bucket",
   "item.superpackutils.pure_sulfuric_acid_bucket": "Liquid Pure Sulfuric Acid Bucket",
   "item.superpackutils.cyanide_bucket": "Liquid Cyanide Bucket",
   "item.superpackutils.ammonia_bucket": "Liquid Ammonia Bucket",
@@ -205,7 +204,8 @@
   "item.superpackutils.pf_solution_bucket": "Potassium Fluoride Solution Bucket", 
   "item.superpackutils.ph_solution_bucket": "Potassium Hydroxide Solution Bucket", 
   "item.superpackutils.sh_solution_bucket": "Sodium Hydroxide Solution Bucket", 
-  "item.superpackutils.cs_solution_bucket": "Calcium Sulfate Solution Bucket", 
+  "item.superpackutils.cs_solution_bucket": "Calcium Sulfate Solution Bucket",
+  "item.superpackutils.plastic_waste_bucket": "Liquid Plastic Waste Bucket",
 
   "gas.superpackutils.ethyl_chloride": "Ethyl Chloride",
   "gas.superpackutils.polyethene": "Polyethylene",
@@ -342,7 +342,6 @@
   "item.superpackutils.villiaumite": "Villiaumite",
   "item.superpackutils.villiaumite_dust": "Villiaumite Dust",
   "item.superpackutils.crystal_shard": "Crystal Shard",
-  "item.superpackutils.octane_bucket": "Liquid Octane Bucket",
   "item.superpackutils.alchemical_aluminum_dust": "Alchemical Aluminum Dust",
   "item.superpackutils.alchemical_copper_dust": "Alchemical Copper Dust",
   "item.superpackutils.alchemical_gold_dust": "Alchemical Gold Dust",
@@ -364,8 +363,6 @@
   "item.superpackutils.pressurized_capacitor": "Pressurized Capacitor",
   "item.superpackutils.tetraethyl_lead_ingot": "Tetraethyl Lead Ingot",
   "item.superpackutils.tetraethyl_lead_dust": "Tetraethyl Lead Dust",
-  "item.superpackutils.sulfurized_naphtha_bucket": "Sulfurized Naphtha Bucket",
-  "item.superpackutils.pyrotheum_bucket": "Blazing Pyrotheum Bucket",
   "item.superpackutils.redstone_alloy_ingot": "Redstone Alloy Ingot",
   "item.superpackutils.vibrant_alloy_ingot": "Vibrant Alloy Ingot",
   "item.superpackutils.mixed_alloy_ingot": "Mixed Alloy Ingot",
