Added new items and items
- Added Reinforced Obsidian
- Added Dark Steel Block
- Added Dark Steel Ingot
- Added Dark Steel Dust
- Added Dark Steel Nugget
- Added Prosperity Ingot (No Textures)
- Added Prosperity Shard (No Textures)
- Changed Compressed Steel Texture
- Added Obsidian Alloy Ingot
- Added Glowstone Alloy Ingot
- Added Refined Redstone Dust
- Added Refined Glowstone Dust
- Added Refined Redstone Ingot

--- a/src/main/resources/assets/superpackutils/lang/en_us.json
+++ b/src/main/resources/assets/superpackutils/lang/en_us.json
@@ -12,6 +12,7 @@
   "block.superpackutils.infused_uranium_ore": "Infused Uranium Ore",
   "block.superpackutils.platinum_block": "Platinum Block",
   "block.superpackutils.redstone_clock": "Redstone Clock",
+  "block.superpackutils.dark_steel_block": "Dark Steel Block",
   "block.superpackutils.metallurgic_casing": "Metallurgic Casing",
   "block.superpackutils.assembler_frame": "Assembler Frame",
   "block.superpackutils.improved_metallurgic_casing": "Improved Metallurgic Casing",
@@ -23,6 +24,7 @@
   "block.superpackutils.mixer_casing": "Mixer Casing",
   "block.superpackutils.tiny_torch": "Tiny Torch",
   "block.superpackutils.wall_tiny_torch": "Wall Tiny Torch",
+  "block.superpackutils.reinforced_obsidian": "Reinforced Obsidian",
   "block.superpackutils.blizz_spawner": "Broken Blizz Spawner",
   "block.superpackutils.blitz_spawner": "Broken Blitz Spawner",
   "block.superpackutils.basalz_spawner": "Broken Basalz Spawner",
@@ -431,6 +433,19 @@
   "item.superpackutils.uranium_gear": "Uranium Gear",
   "item.superpackutils.uranium_ore_piece": "Uranium Ore Piece",
   "item.superpackutils.zinc_dust": "Zinc Dust",
+  "item.superpackutils.cryotheum_dust": "Cryotheum Dust",
+  "item.superpackutils.petrotheum_dust": "Petrotheum Dust",
+  "item.superpackutils.aerotheum_dust": "Aerotheum Dust",
+  "item.superpackutils.obsidian_alloy_ingot": "Obsidian Alloy Ingot",
+  "item.superpackutils.glowstone_alloy_ingot": "Glowstone Alloy Ingot",
+  "item.superpackutils.refined_redstone_dust": "Refined Redstone Dust",
+  "item.superpackutils.refined_glowstone_dust": "Refined Glowstone Dust",
+  "item.superpackutils.refined_redstone_ingot": "Refined Redstone Ingot",
+  "item.superpackutils.prosperity_ingot": "Prosperity Ingot",
+  "item.superpackutils.prosperity_shard": "Prosperity Shard",
+  "item.superpackutils.dark_steel_ingot": "Dark Steel Ingot",
+  "item.superpackutils.dark_steel_dust": "Dark Steel Dust",
+  "item.superpackutils.dark_steel_nugget": "Dark Steel Nugget",
   "item.superpackutils.destroyer_of_the_nature": "Destroyer Of The Nature",
 
   "itemGroup.superpackutils": "SuperPack: Utils",
