--- a/src/main/resources/assets/superpackutils/lang/en_us.json
+++ b/src/main/resources/assets/superpackutils/lang/en_us.json
@@ -446,6 +446,7 @@
   "item.superpackutils.dark_steel_ingot": "Dark Steel Ingot",
   "item.superpackutils.dark_steel_dust": "Dark Steel Dust",
   "item.superpackutils.dark_steel_nugget": "Dark Steel Nugget",
+  "item.superpackutils.powered_substance": "Powered Substance",
   "item.superpackutils.destroyer_of_the_nature": "Destroyer Of The Nature",
 
   "itemGroup.superpackutils": "SuperPack: Utils",
