Added Calcium Carbure

--- a/src/main/resources/assets/superpackutils/lang/en_us.json
+++ b/src/main/resources/assets/superpackutils/lang/en_us.json
@@ -341,6 +341,7 @@
   "item.superpackutils.carobbiite_dust": "Carobbiite Dust",
   "item.superpackutils.boron_nitride": "Boron Nitride",
   "item.superpackutils.boron_nitride_dust": "Boron Nitride Dust",
+  "item.superpackutils.calcium_carbure": "Calcium Carbure",
   "item.superpackutils.boron_arsenide": "Boron Arsenide",
   "item.superpackutils.boron_arsenide_dust": "Boron Arsenide Dust",
   "item.superpackutils.rhodochrosite": "Rhodochrosite",
@@ -348,6 +349,8 @@
   "item.superpackutils.villiaumite": "Villiaumite",
   "item.superpackutils.villiaumite_dust": "Villiaumite Dust",
   "item.superpackutils.crystal_shard": "Crystal Shard",
+  "item.superpackutils.borax_pulp": "Borax Pulp",
+  "item.superpackutils.calcium_sulfate_pulp": "Calcium Sulfate Pulp",
   "item.superpackutils.alchemical_aluminum_dust": "Alchemical Aluminum Dust",
   "item.superpackutils.alchemical_copper_dust": "Alchemical Copper Dust",
   "item.superpackutils.alchemical_gold_dust": "Alchemical Gold Dust",
