Added Gears & Plates for Platinum & Mythril

--- a/src/main/resources/assets/superpackutils/lang/en_us.json
+++ b/src/main/resources/assets/superpackutils/lang/en_us.json
@@ -406,6 +406,10 @@
   "item.superpackutils.iron_ore_piece": "Iron Ore Piece",
   "item.superpackutils.lead_ore_piece": "Lead Ore Piece",
   "item.superpackutils.rune": "Blank Rune",
+  "item.superpackutils.platinum_gear": "Platinum Gear",
+  "item.superpackutils.platinum_plate": "Platinum Plate",
+  "item.superpackutils.mythril_gear": "Mythril Gear",
+  "item.superpackutils.mythril_plate": "Mythril Plate",
   "item.superpackutils.abs_pellet": "ABS Pellet",
   "item.superpackutils.abs_sheet": "ABS Sheet",
   "item.superpackutils.azure_sawdust": "Azure Sawdust",
