--- a/src/main/resources/assets/superpackutils/lang/en_us.json
+++ b/src/main/resources/assets/superpackutils/lang/en_us.json
@@ -405,6 +405,7 @@
   "item.superpackutils.starlight_shard": "Starlight Shard",
   "item.superpackutils.iron_ore_piece": "Iron Ore Piece",
   "item.superpackutils.lead_ore_piece": "Lead Ore Piece",
+  "item.superpackutils.rock": "Rock",
   "item.superpackutils.rune": "Blank Rune",
   "item.superpackutils.platinum_gear": "Platinum Gear",
   "item.superpackutils.platinum_plate": "Platinum Plate",
