Added Potassium and added a texture for Potassium Hydroxide & Fluoride

--- a/src/main/resources/assets/superpackutils/lang/en_us.json
+++ b/src/main/resources/assets/superpackutils/lang/en_us.json
@@ -410,6 +410,7 @@
   "item.superpackutils.rune": "Blank Rune",
   "item.superpackutils.platinum_gear": "Platinum Gear",
   "item.superpackutils.platinum_plate": "Platinum Plate",
+  "item.superpackutils.potassium_pulp": "Potassium Pulp",
   "item.superpackutils.mythril_gear": "Mythril Gear",
   "item.superpackutils.mythril_plate": "Mythril Plate",
   "item.superpackutils.abs_pellet": "ABS Pellet",
